--- a/MyApp/packages.config
+++ b/MyApp/packages.config
@@ -2,13 +2,18 @@
 <packages>
   <package id="AdminLTE" version="2.4.0" targetFramework="net452" />
   <package id="AdminLTE.Template" version="0.0.2.1" targetFramework="net452" />
+  <package id="AdvancedStringBuilder" version="0.1.0" targetFramework="net452" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="4.3.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net452" />
+  <package id="JavaScriptEngineSwitcher.Core" version="3.1.0" targetFramework="net452" />
+  <package id="JavaScriptEngineSwitcher.V8" version="3.1.6" targetFramework="net452" />
+  <package id="JavaScriptEngineSwitcher.V8.Native.win-x64" version="3.1.5" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="jQuery.LoadingOverlay" version="2.1.5" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
+  <package id="JSPool" version="4.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
@@ -30,10 +35,15 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="popper.js" version="1.14.0" targetFramework="net452" />
+  <package id="React.Core" version="5.1.2" targetFramework="net452" />
+  <package id="React.Web" version="5.1.2" targetFramework="net452" />
+  <package id="React.Web.Mvc4" version="5.1.2" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="Select2.js" version="4.0.11" targetFramework="net452" />
   <package id="Tether.New" version="1.3.3" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
