--- a/MyApp/Web.config
+++ b/MyApp/Web.config
@@ -30,10 +30,7 @@
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
-  <handlers>
-			<remove name="Babel" />
-			<add name="Babel" verb="GET" path="*.jsx" type="React.Web.BabelHandlerFactory, React.Web" preCondition="integratedMode" />
-		</handlers></system.webServer>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
